# intero-manager

./: .gitignore  README.md  intero-manager.cabal
app/: Main.hs
src/: GhcOutputParser.hs  InteroManager.hs
test/: GhcOutputParserSpec.hs  Spec.hs  testfile.txt
test/data/testproject/: testproject.cabal
test/data/testproject/src/: ParseError.hs  TypeError.hs
