name:                testproject
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/testproject#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     ParseError
                     , TypeError
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
